[workspace]
resolver = "2"

members = ["day-*"]


[workspace.dependencies]
aoc-utils = { path = "../aoc-utils/aoc-utils" }
aoc-macros = { path = "../aoc-utils/aoc-macros" }

rstest = "0.24.0"

regex = "1.11.1"

itertools = "0.14.0"
rayon = "1.8.0"
num = "0.4.3"
nalgebra = "0.33.2"
#colored = "3.0.0"
