[package]
name = "day-22"
version = "0.1.0"
edition = "2021"


[features]
test-answers = []


[dependencies]
aoc-macros = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }


[dev-dependencies]
aoc-utils = { workspace = true }
rstest = { workspace = true }
